# telegram-music-bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
issue/: audio_checker.py  bot.py  readme.md
src/: audio_processor.py  bot.py  main.py  utils.py
tests/: test_audio_processor.py
